# multi-agent

./: .editorconfig  .eslintrc.json  .gitignore  .importlintrc.json  README.md  index.html  layer-guard.config.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  gardener.yml  observability.yml
agents/gardener/: README.md  config.yml  index.ts
docs/: CONFIGURATION.md  HARNESS_DEV_SUMMARY.md  TASK_BREAKDOWN.md  TEST_CASES.md
docs/constraints/: README.md
docs/context/: ARCHITECTURE.md  DECISIONS.md  GLOSSARY.md  PATTERNS.md  README.md
docs/guides/: CONTRIBUTING.md
docs/observability/: README.md  logs.md  metrics.md  traces.md
docs/技术选型/: 01-技术选型分析.md  UI设计提示词.md
docs/需求分析/: 01-影响地图.md  02-用户画像.md  03-用户故事地图.md  04-用户旅程地图.md  README.md
observability/: docker-compose.yml
observability/loki/: loki-config.yml
observability/otel/: otel-collector-config.yml
observability/prometheus/: prometheus.yml
observability/promtail/: promtail-config.yml
playwright-report/: index.html
src/: App.tsx  index.css  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: conversation.rs  dashboard.rs  expert.rs  llm.rs  mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/models/: conversation.rs  expert.rs  mod.rs
src/application/: index.ts
src/domain/: conflict.ts  conversation.ts  dashboard.ts  expert.ts  follow-up.ts  index.ts
test-results/: .last-run.json
tests/: setup.ts
(+103 files in other folders)
