[package]
name = "multi-agent-app"
version = "0.1.0"
description = "Multi-Agent Collaboration Platform"
authors = ["Multi-Agent Team"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "multi_agent_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
eventsource-stream = "0.2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
